Bugfix EnumSet initialization and overflow of messages in view

--- a/webclient/src/main/webapp/resources/css/standard.css
+++ b/webclient/src/main/webapp/resources/css/standard.css
@@ -34,11 +34,11 @@ a:visited {
     width: 1024px;
     min-width: 1024px;
     max-width: 1024px;
-    margin-right: auto;
+    margin-right: auto; 
     margin-left: auto; /* fix max-width incompatibility in IE6 */
-    width: expression(document.body.clientWidth > 1024 ? "1024px" : "auto");
-    overflow: hidden;
-    display: block;
+   /* width: expression(document.body.clientWidth > 1024 ? "1024px" : "auto");*/
+    overflow: visible; 
+   display: block;
 }
 
 .menu {
@@ -50,7 +50,7 @@ a:visited {
 }
 
 .content {
-    width: 770px;
+    width: 1024px;
     height: auto;
     vertical-align: top;
     text-align: left;
